# aethos-client

./: .gitignore  AGENTS.md  Cargo.toml  README.md  manifest
.github/workflows/: tauri-spike-bundles.yml
docs/: file-transfer-roadmap.md  project-charter.md  update-lifecycle.md
docs/testing/: gui-network-e2e.md
scripts/: dev.sh  install.ps1  install.sh  setup-git-hooks.sh
scripts/e2e/: run-scenario.sh  toxiproxy_apply.py
scripts/hooks/: pre-commit  pre-push
scripts/release/: create-prerelease.sh  create-release.sh  lib.sh
spikes/tauri-desktop/: README.md  package-lock.json  package.json
spikes/tauri-desktop/e2e/: package.json
spikes/tauri-desktop/e2e/scripts/: send-wayfarer-media.mjs
spikes/tauri-desktop/e2e/test/: dual-instance.mjs
spikes/tauri-desktop/src/: App.jsx  index.css
spikes/tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
spikes/tauri-desktop/src-tauri/icons/: icon.icns
spikes/tauri-desktop/src-tauri/src/: app_body.rs  app_state.rs  main.rs  media_v1.rs
spikes/tauri-desktop/src/components/ui/: card.jsx
spikes/tauri-desktop/src/lib/: soundManager.js
spikes/tauri-desktop/web/: index.html  main.js  styles.css
src/: main.rs
src/aethos_core/: ble_discovery.rs  gossip_store_sqlite.rs  gossip_sync.rs  identity_store.rs  logging.rs  mod.rs  protocol.rs  vectors.rs
src/relay/: client.rs
