[package]
name = "aethos-tauri-spike"
version = "0.1.0"
description = "Isolated Tauri spike for Aethos desktop direction"
authors = ["Aethos maintainers"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", default-features = false, features = ["wry"] }

[features]
default = []
